--- a/resources/css/adnat.css
+++ b/resources/css/adnat.css
@@ -4,6 +4,20 @@
   text-align: center;
   font-weight: bold;
 }
+.morefeedback {
+  padding: 0.0em;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  background: red;
+}
+.feedback {
+  padding: 0.0em;
+  font-size: 1.2em;
+  text-align: center;
+  font-weight: normal;
+  background: orange;
+}
 .red {
   text-align: center;
   margin-left: auto;
