--- a/resources/css/adnat.css
+++ b/resources/css/adnat.css
@@ -82,7 +82,7 @@ color: #0e4b75;
   width:100%;
   padding:0 0 0 0;
   margin: 0 0 0 0;
-  background-image:url("/resources/images/pggray.png");
+  background-image:url("../images/pggray.png");
   height:14px;
   border:1px solid #CCC;
   -moz-border-radius:2px;
@@ -96,6 +96,6 @@ color: #0e4b75;
   left:0;
   top:0;
   width:0px;
-  background-image:url("/resources/images/pgblue.png");
+  background-image:url("../images/pgblue.png");
   height:12px;
 }
